--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "weather-app",
   "version": "1.0.0",
   "description": "Development and build packages for the Weather Application",
-  "main": "app.js",
+  "default": "public/index.html",
   "scripts": {
     "start": "parcel public/index.html",
     "build": "parcel build public/index.html"
